--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,12 +4,12 @@ $font-size: 16px;
 body {
   font-family: $font-family;
   font-size: $font-size;
+  min-width: 1070px;
 }
 
 h1 {
   font-size: 2rem;
 }
-
 
 h2 {
   font-size: 1.5rem;
@@ -18,6 +18,205 @@ h2 {
 .container {
   margin: 0 auto;
 }
+
+.wrapper {
+  margin: 4rem 4rem 3rem;
+}
+
+.content-area__wrapper {
+  height: calc(100vh - 9rem);
+  padding-top: 2rem;
+
+  .content-form {
+    display: flex;
+    border: 2px solid #ff6e20;
+    border-radius: 3em 0;
+    box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
+
+    .content-form__inner {
+      width: 50%;
+      text-align: center;
+    }
+  }
+}
+
+.first-step {
+  background: #ff6e20 url('../images/first-step.jpg') no-repeat center center;
+}
+
+.content-data {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-form__title {
+  margin: 17.5% 1em 0 1em;
+  display: block;
+  color: #fff;
+  font-size: 2em;
+  font-weight: 700;
+  line-height: 1.125em;
+}
+
+.form-area {
+  margin: 0 4rem 0 6rem;
+
+  input[type=text],
+  button {
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+@mixin button-reset {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+@mixin input-reset {
+  border:none;
+  background:none;
+  outline:none;
+  padding:0;
+}
+
+.custom-button {
+  @include button-reset;
+  background: #ff6e20;
+  height: 3.5rem;
+  color: #fff;
+  font-size: 1.5em;
+  font-weight: 900;
+  margin-top: 1rem;
+}
+
+.custom-input {
+  @include input-reset;
+  height: 2.5rem;
+  font-size: 1em;
+  color: #333;
+  padding-left: 1em;
+  margin-bottom: 2em;
+  background: #ffb78f;
+}
+
+.radio-section {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 4.5rem;
+}
+
+.negative-margin_top {
+  margin-top: -2rem;
+}
+
+
+/* Radio Buttons ============= */
+
+.radio-form:checked,
+.radio-form:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+
+.radio-form:checked + label,
+.radio-form:not(:checked) + label {
+    position: relative;
+    padding-left: 40px;
+    cursor: pointer;
+    line-height: 26px;
+    display: inline-block;
+    color: #333;
+}
+
+.radio-form:checked + label:before,
+.radio-form:not(:checked) + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #c4c4c4;
+    border-radius: 100%;
+    background: #c4c4c4;
+}
+
+.radio-form:checked + label:after,
+.radio-form:not(:checked) + label:after {
+    content: '';
+    width: 16px;
+    height: 16px;
+    background: #ffb78f;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    border-radius: 100%;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.radio-form:not(:checked) + label:after {
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
+.radio-form:checked + label:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+.radio-form:not(:first-child) + label {
+  margin-left: 4.5rem;
+}
+
+
+/* Access Section ============= */
+
+.access-section {
+  display: flex;
+  align-items: center;
+  height: 3rem;
+  font-size: 0.75rem;
+  position: relative;
+
+  input[type=checkbox] {
+    display: none;
+  }
+
+  label {
+    cursor: pointer;
+    margin-left: 2rem;
+  }
+
+  label:before {
+    content: '';
+    height: 1rem;
+    width: 1rem;
+    position: absolute;
+    background: #c4c4c4;
+    left:0;
+  }
+
+  input[type=checkbox]:checked + label:before {
+    content: "\2713";
+    font-size: 1em;
+    color: #ffb78f;
+    text-align: center;
+  }
+}
+
+
 
 
 
