refactor: add color-scheme class to body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -335,7 +335,7 @@ h2 {
   }
 
   .content-image {
-    background: $orange url('../images/first-scheme.svg') no-repeat center center;
+    background: $orange url('../images/first-scheme.svg') no-repeat;
   }
 
   .custom-button {
@@ -365,7 +365,7 @@ h2 {
   }
 
   .content-image {
-    background: $gold url('../images/second-scheme.svg') no-repeat center center;
+    background: $gold url('../images/second-scheme.svg') no-repeat;
   }
 
   .custom-button {
@@ -395,7 +395,7 @@ h2 {
   }
 
   .content-image {
-    background: $red url('../images/third-scheme.svg') no-repeat center center;
+    background: $red url('../images/third-scheme.svg') no-repeat;
   }
 
   .custom-button {
