--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,6 +98,7 @@ h2 {
     margin: 0 0.8rem;
     font-size: 1.4em;
     border-bottom: none !important;
+    outline: none;
   }
 
   .active-item {
