feat: add logic to validate components on the first screen

--- a/src/screens/first/index.scss
+++ b/src/screens/first/index.scss
@@ -19,9 +19,13 @@ $light-magenta: #ffb78f;
     background: $orange;
   }
 
-  .custom-input,
   .radio-form:checked + label:after,
   .radio-form:not(:checked) + label:after {
+    background: $light-magenta;
+  }
+
+  .custom-input {
+    border: 2px solid $light-magenta;
     background: $light-magenta;
   }
 
