fix: fix error styles

--- a/src/components/validation/index.scss
+++ b/src/components/validation/index.scss
@@ -14,4 +14,11 @@ $error-color: #eb5757;
   font-size: 0.75em;
   position: absolute;
   left: 0;
+  z-index: -1;
+}
+
+.error-label::before {
+  content: '';
+  height: 3.5em;
+  display: block;
 }
